2013-07-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* eval.c (update_ERRNO_string): Set PROCINFO["errno"] to 0.
	* io.c (inrec): Since get_a_record may now return -2, be sure
	to throw an error in that case as well.
	(wait_any): Fix what appears to be a bug.  The old logic repeatedly
	called wait until it failed.  When a process has multiple children,
	this causes it to stall until all of them have exited.  Instead,
	we now exit the function after the first successful wait call.
	(do_getline_redir, do_getline): Handle case where get_a_record
	returns -2.
	(errno_io_retry): New function to decide whether an I/O operation should
	be retried.
	(get_a_record): When read returns an error, call errno_io_retry to
	decide whether the operation should be retried.  If so, return -2
	instead of setting the IOP_AT_EOF flag.

2013-07-01         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* eval.c (update_ERRNO_int, unset_ERRNO): Update PROCINFO["errno"].

2013-06-30         Andrew J. Schorr     <aschorr@telemetry-investments.com>
	* awk.h (redirect_string): Declare new function that provides API access
	to the redirection mechanism.
	* gawkapi.h (GAWK_API_MINOR_VERSION): Bump from 0 to 1 since 2 new
	hooks were added to the api.
	(gawk_api_t): Add 2 new functions api_lookup_file and api_get_file.
	(lookup_file, get_file): New macros to wrap the new API functions.
	* gawkapi.c (curfile): Declare this extern, since it is needed
	by lookup_file and get_flie.
	(api_lookup_file): Find an open file using curfile or getredirect().
	(api_get_file): Find or open a file using curfile or redirect_string().
	(api_impl): Add api_lookup_file and api_get_file.
	* io.c (redirect_string): Renamed from redirect and changed arguments
	to take a string instead of a 'NODE *'.  This allows it to be called
	through the API's new get_file hook.
	(redirect): Now implemented by calling redirect_string backend function.
